Comments and some good code format practices were added in main.py

--- a/infra/processed-data-model.ipynb
+++ b/infra/processed-data-model.ipynb
@@ -35,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Load parquet using pyarrow engine\n",
     "df = pd.read_parquet('part-00000-08c1836c-e295-4729-95a9-67b56c05d840-c000.snappy.parquet', engine='pyarrow')"
    ]
   },
